dsprojects/static/Sass/style.scss
/* ... */
.saywhenlogo {
    max-width: 60%;
    height: 15vh;
}

.wrapper {
    display: flex;
    align-items: stretch;
    background-color:$lightgray;
    min-width:$fullwidth;
    height: fit-content;
}

.header {
    width: $fullwidth;
    grid-area: 1 / 1 / 1 / span 5;
    @include media-breakpoint-up(lg) {
        width:$fullwidth - $sidebarwidth;
    }
    h1 {
        display:table-cell;
        vertical-align: bottom;
        align-self:end;
        padding-bottom:1vw;
        text-indent:5vw;
        white-space: nowrap;
        grid-area: 1 / 1 / 1 / span 5;
        width: $fullwidth;
        height:$header_height;
        font-size: 6.5vw;
        font-weight: bold;
        color: $lightgray;
        background-color:$forestgreen;
        @include media-breakpoint-up(lg) {
            font-size: 65px;
        }
        @media screen and (min-aspect-ratio: 2/1) {
            font-size: 10vh;
        }
    }
}

/*Sidebar*/
.sidebar {
    display:none;
    &.active {
        margin-left: -250px;
    }
    @include media-breakpoint-up(lg) {
        & .sidebarimage {
            width: 80%;
            margin-top: 2.5vh;
            margin-right: 10%;
            margin-left: 10%;
        }
        display: flex;
        background: $forestgreen;
        color: $white;
        transition: all 0.3s;
        min-width: $sidebarwidth;
        max-width: $sidebarwidth;
        min-height: 50vh;
        flex-direction: column;
        position: relative;
        z-index: 0;
        ul li a {
            font-weight: bold;
            color: $lightgray;
            padding: 10px;
            font-size: 1.1em;
            display: block;
            &:hover {
                color: $white;
                background: $green;
                text-decoration: none;
            }
        }
        ul.components {
            padding: $side_padding 0;
            border-bottom: 1px solid $forestgreen;
            text-indent: .5vw;
            font-size: 1.5vw;
        }
    }
}

/*Bottom Bar (narrow screens)*/
.bottombar {
    @include media-breakpoint-up(lg) {
        display:none;
    }
    background: $forestgreen;
    color: $lightgray;
    transition: all 0.3s;
    display: flex;
    flex-direction: column-reverse;
    min-width: 100%;
    max-height: $banner_height;
    position: fixed;
    bottom: 0;
    z-index: 9999;
}

button.btn.btn_bottombar {
    width: 100%;
    background-color: $forestgreen;
    color: $lightgray;
    padding: 0;
    height: 100%;
    border-radius:0;
    &:hover {
        background: $green;
    }
}

.row {
    display: block;
    margin-right: -15px;
    margin-left: -15px;
}

.collapsebuttonrow_bottombar{
    line-height: 3.5vh;
    background-color: $forestgreen;
    margin-left: -15px;
    margin-right: -15px;
    padding:0;
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.collapsebuttonrow_bottombar_btn {
    width: $fullwidth;
    background: $forestgreen;
    border-radius:0;
    &:hover {
    	background: $green;
    }
    &:not(:disabled):not(.disabled):active {
        background: none;
    }
}

.bottombarrow {
    text-align: center;
    line-height: $bottombar_height;
    background: $forestgreen;
    padding:0;
    a {
        display: block;
        text-decoration: none;
        color: $lightgray;
        text-align: center;
        line-height: $bottombar_height;
        font-size: 3.5vh;
        font-weight: bold;
        width: 100%;
        &:hover {
            background: $green;
        }
    }
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.threecolcontainer {
    display: grid;
    height: $bottombar_height;
    grid-template: $bottombar_height / repeat(3, 1fr); 
}

.bottombarcol {
    grid-column: span 1;
    text-align: center;
    line-height: $bottombar_height;
    background:$forestgreen;
    padding:0;
    a {
        text-decoration: none;
        color: $lightgray;
        text-align: center;
        line-height: $bottombar_height;
        font-size: 3.5vh;
        font-weight: bold;
        width: 100%;
        &:hover {
            background: $green;
        }
    }
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.ct {
    margin-top: 5vh;
    font-size: xx-large;
    font-weight: bold;
}

.footerclass {
    color: $lightgray;
    font-size:2vh;
}

.homeicon {
    position: absolute;
    top: 3vh;
    right: 3vh;
    height: 5vh;
}

img.backicon {
    position: absolute;
    top: 3vh;
    right: 11vh;
    height: 5vh;
}

.demovid {
    width: 80vw;
    @include media-breakpoint-up(lg) {
        width: 60vw;
    }
}

.resume_iframe {
    grid-column: 2 / span 3;
    margin-top: 5vh;
    margin-left: 5vw;
    grid-row: 3;
    height: 70vh;
    width: 80vw;
    display:none;
    @include media-breakpoint-up(lg) {
        display: grid;
        width: 60vw;
        grid-column: 2 / span 3;
        margin-top: 5vh;
        margin-left: 5vw;
        grid-row: 3;
        height: 70vh;
    }
}

.resume_svg_cont {
    margin-top: 1vh;
    grid-row: 3;
    margin-left: 2.5vw;
    height: 70vh;
    width: 95vw;
    @include media-breakpoint-up(lg) {
        display: none;
    }
}

.resume_svg {
    width:100%;
}

.resumebutton {
    position: relative;
    left: 65vw;
    top: -1vh;
    height: 4vh;
    width: 12.5vw;
    font-size: 1.5vw;
    font-weight: 700;
    background-color: $forestgreen;
    a {
        color: $lightgray;
        &:hover {
            text-decoration: none;
        }
    }
    @include media-breakpoint-up(lg) {
        left: 55vw;
        top: -5vh;
        height: 7.5vh;
        width: 10vw;
    }
}

.resumedownload {
    position: relative;
    top: 2vh;
    left: 10vw;
    font-weight: 700;
    color: $forestgreen;
    font-size: 3vw;
    display: flex;
    a {
        color: $green;
    }
    @include media-breakpoint-up(lg) {
        font-size: 30px;
    }
}
/* ... */

